[package]
name = "bevy_ecs_enum_filter"
version = "0.16.2"
edition = "2024"
description = "cloned https://github.com/mikkelens/bevy_enum_filter forked https://github.com/MrGVSV/bevy_enum_filter and edited"

[features]
# use bevy_ecs crate without bevy crate
default = ["dep:bevy_ecs"]

# use bevy crate instead of bevy_ecs crate
bevy = ["dep:bevy", "bevy_ecs_enum_filter_derive/bevy"]

[dependencies]
bevy = { version = "0.16", default-features = false, optional = true }
bevy_ecs = { version = "0.16", default-features = false, optional = true }
bevy_ecs_enum_filter_derive = { path = "./bevy_ecs_enum_filter_derive" }

[dev-dependencies]
bevy = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }

[[example]]
name = "schedule"
path = "./examples/schedule.rs"
required-features = ["macro"]
